use jar files instead of apk to bypass dex2jar issue verfiy error in jvm